@@ -1,10 +1,13 @@
 package fr.epsi.SpringMovReview.service;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 
 //import fr.epsi.moviereview2.repository.MovieRepository;
@@ -21,13 +24,12 @@ public class MovieService {
 		return data;
 	}
 	
-	public String loadJson () throws IOException
-	{
+	public String loadJson () throws IOException, URISyntaxException {
 		/* TMDB API Key : 719886a0b8020a1ae30c9c5d174c01d3
 		 * Exemple API request : https://api.themoviedb.org/3/movie/550?api_key=719886a0b8020a1ae30c9c5d174c01d3
 		 * API Read Access Token (v4 auth) : eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI3MTk4ODZhMGI4MDIwYTFhZTMwYzljNWQxNzRjMDFkMyIsInN1YiI6IjYwMzhjMTlhMzIyYjJiMDA1NTI1NzkzOCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.jYvJTMpwaUNXjTBCXcBEsze0sLtJjUMaKlAyYgpM2fQ
 		 */
-        Path fileName = Path.of("C:\\Workspaces\\eclipse-workspace-java\\SpringMovReview\\src\\main\\resources\\static\\moviejson.txt");     
+        Path fileName = Paths.get(ClassLoader.getSystemResource("static/moviesjson.txt").toURI());
         String stringSon = Files.readString(fileName);
         return stringSon;
 	}
